<resources>
    <string name="app_name">BLE Lab</string>
    <string name="show_log">Log</string>
    <string name="service">Service</string>
    <string name="property">Property</string>
    <string name="type">Primary Service</string>
    <string name="start_scan">Scan</string>
    <string name="stop_scan">Stop Scanning</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="notify">Notify</string>
    <string name="indicate">Indicate</string>
    <string name="clear_screen">Clear</string>
    <string name="device_name">Device Name:&#160;</string>
    <string name="mac_address">MAC Address:&#160;</string>
    <string name="write_onTime">Write OnTime</string>
    <string name="write_onTime_time">1000</string>
    <string name="write_onTime_unit">ms</string>
    <string name="string_hint">Type something here</string>
    <string name="hex_hint">0123456789abcdef</string>
    <string name="dec_hint">100</string>
    <string name="setting">Setting</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件,可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名,多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备MAC地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID,多个之间以英文逗号隔开</string>
    <string name="setting_auto_reconnect">AutoConnect ?</string>
    <string name="device_info">Device Information</string>
    <string name="about">About</string>
    <string name="about_details"><b>BLE Lab</b> is a generic tool which is designed for
        BLE(Bluetooth Low Energy) debug. It support BLE Scan and Connection.
        \n<b>V1.0.0</b></string>
    <string name="denote">Denote</string>
    <string name="denote_details">If this App is useful for
        and you want to support the subsequent development and maintenance,
        you can scan Wechat QR code to support me, and I would be grateful.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_details">If you found any bug, or you have new idea for this App,
        welcome email me, 1055942474@qq.com.\nYou can also get the source code on Github.
        \nhttps://github.com/langxing08/BLE-Lab</string>

    <string-array name="decoder">
        <item>Str</item>
        <item>Hex</item>
        <item>Dec</item>
    </string-array>

</resources>
