<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting"/>

        <item
            android:id="@+id/nav_device_info"
            android:icon="@drawable/ic_comment"
            android:visible="false"
            android:title="@string/device_info"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_task"
            android:title="@string/about"/>

        <item
            android:id="@+id/nav_denote"
            android:visible="false"
            android:icon="@drawable/nav_friends"
            android:title="@string/denote"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/nav_mail"
            android:title="@string/feedback"/>
    </group>

</menu>